<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <EditText
        android:id="@+id/treeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autoText="false"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/tree_search_default"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="searchTree"
        android:text="@android:string/search_go"
        app:layout_constraintBaseline_toBaselineOf="@+id/treeSearch"
        app:layout_constraintStart_toEndOf="@+id/treeSearch" />

    <android.support.v7.widget.CardView
        android:id="@+id/treeCard1"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="goToYew"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchResultsLayout">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardThumbnail"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/yew_fruit" />

            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/card_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cardSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="@string/card_subtitle"
                    android:textAlignment="viewStart"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/treeCard2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="goToBirch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeCard1">

        <LinearLayout
            android:id="@+id/cardLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cardThumbnail2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/birch" />

            <LinearLayout
                android:id="@+id/textLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cardTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="@string/birch_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cardSubtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="12dp"
                    android:text="@string/birch_subtitle"
                    android:textAlignment="viewStart"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/searchResultsLayout"
        android:layout_width="368dp"
        android:layout_height="321dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/treeSearch">

    </LinearLayout>

</android.support.constraint.ConstraintLayout>